updated the portfolio

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         </a>
         </div>
 
-        <div class="nextWork">
+        <!-- <div class="nextWork">
          <a href="https://en.wikipedia.org/wiki/Infantry_square">
         <img src="assets\images\infantrysquare.jpg" id="displayImage"/>
          <div class="text-block2">
@@ -76,7 +76,18 @@
         <p>HTML/CSS</p>
         </div>
         </a> 
+        </div> -->
+
+        <div class="nextWork">
+        <a href="https://brianalvarezmagana.github.io/Project_01/">
+        <img src="assets\images\dirtyFood_firstProject.png" id="displayImage"/>
+        <div class="text-block2">
+        <h4>dirtyFood_firstProject</h4>
+        <p>HTML/CSS</p>
         </div>
+        </a> 
+        </div>
+
         </div>
         </section>
         <section class="containerRow3" id="contactme">
